# ShapeRendering

./: .gitignore  CMakeLists.txt  Cube.cpp  Cube.hpp  Cylinder.cpp  Cylinder.hpp  Lightsource.cpp  Lightsource.hpp  Matrix3x3.hpp  Pyramid.cpp  Pyramid.hpp  README.md  Renderer.hpp  RendererConsole.hpp  Screen.hpp  Shape.cpp  Shape.hpp  Sphere.cpp  Sphere.hpp  Torus.cpp  Torus.hpp  Triple.hpp  Vector.hpp  main.cpp
rendering/: Renderer.hpp  RendererConsole.hpp  Screen.cpp
shapes/: Cube.cpp  Cube.hpp  Cylinder.cpp  Cylinder.hpp  Pyramid.cpp  Pyramid.hpp  Shape.cpp  Shape.hpp  Sphere.cpp  Sphere.hpp  Torus.cpp  Torus.hpp
utils/: Matrix3x3.hpp  Vector.hpp  rlutil.h
